# im-being-pydantic

./: .gitignore  .pre-commit-config.yaml  README.MD  pydantic.ipynb  pydantic.slides.html  pyproject.toml
fastapi-example/: main.py
src/: main.py
