[tool.poetry]
name = "imbeingpydantic"
version = "0.1.0"
description = "different use cases for pydantic"
authors = ["tim frazer <tim@littlebigthings.co>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
datamodel-code-generator = "^0.8.3"
bpython = "^0.21"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
typer = "^0.3.2"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
